changed graphql to apollo server

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
-DB_URI = mongodb+srv://user1:user1@cluster0.njgll.mongodb.net/chatapp?retryWrites=true&w=majority
+DB_URI = mongodb+srv://user1:user1@cluster0.njgll.mongodb.net/chata0
+
+APOLLO_KEY=service:My-Graph-kck17l:bdb7nUwD8oxafBEfSZVI-Q
+APOLLO_GRAPH_ID=My-Graph-kck17l
+APOLLO_GRAPH_VARIANT=current
+APOLLO_SCHEMA_REPORTING=true
